# UFPB_robotics_project3

./: .gitignore  README.md  color_wall_report.txt  kill_sim.sh  parse_maze.py
src/jetauto_maze_solver/: package.xml  setup.cfg  setup.py
src/jetauto_maze_solver/config/: slam_toolbox.yaml
src/jetauto_maze_solver/jetauto_maze_solver/: camera_color_config.py  color_wall_counter.py  maze_navigator.py  robotica_style_color.py
src/jetauto_maze_solver/launch/: launch_maze_solver.launch.py  start_all.launch.py
src/jetauto_maze_solver/rviz/: maze_solver.rviz
src/robotics_subject/: CMakeLists.txt  README.md  package.xml
src/robotics_subject/launch/: ekf.launch.py  robot_description.launch.py  rviz.launch.py  simulation_world.launch.py
src/robotics_subject/params/: ekf.yaml
src/robotics_subject/src/: gazebo_mecanum_drive.cpp
src/robotics_subject/urdf/: depth_camera.urdf.xacro  jetauto.xacro  jetauto_car.urdf.xacro  lidar.urdf.xacro
src/robotics_subject/worlds/: labyrinth.world
