<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetauto_maze_solver</name>
  <version>1.0.0</version>
  <description>Autonomous maze navigation and colored wall detection for JetAuto robot</description>
  <maintainer email="gab@todo.todo">Joao Gabriel</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>slam_toolbox</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
